# mq-dashboard

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
