[package]
name = "mq-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# 升級到 0.6，這與你的 dx 0.7.5 較為相容
dioxus = { version = "0.6", features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }                 # 順便升級 reqwest
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# 在 0.6 中，server 功能已經被正確整合進 dioxus/server
server = ["dioxus/server"]
